<resources>
    <string name="app_name">FirstTimersApp</string>
    <string name="add">Add</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_address">Email</string>
    <string name="address">Contact Address</string>
    <string name="prayer_req">Prayer Request</string>
    <string name="submit">Submit</string>
</resources>